syntax = "proto3";

package notification;

import "google/protobuf/empty.proto";

option go_package = "/notification";


service Notification {
	rpc CalcConfig(IdList) returns (UUID) {}
	// MSTP tables to configure
	rpc UpdateConfigMstpCistPortTable   (InMstpCistPortTableRequest)    returns (google.protobuf.Empty) {}
	rpc UpdateConfigMstpCistTable       (InMstpCistTableRequest)        returns (google.protobuf.Empty) {}
	rpc UpdateConfigMstpConfigTable     (InMstpConfigTableRequest)      returns (google.protobuf.Empty) {}
	rpc UpdateConfigMstpFidToMstiV2Table(InMstpFidToMstiV2TableRequest) returns (google.protobuf.Empty) {}
	rpc UpdateConfigMstpPortTable       (InMstpPortTableRequest)        returns (google.protobuf.Empty) {}
	rpc UpdateConfigMstpTable           (InMstpTableRequest)            returns (google.protobuf.Empty) {}
}


// Region CalcConfig
	message UUID {
		string Value = 1;
	}

	message IdList {
		repeated UUID Values = 1;
	}


// Region MSTP
	message InMstpCistPortTableRequest {
		int32  PathCost          =  1;
		bool   EdgePort          =  2;
		bool   MacEnabled        =  3;
		bool   RestrictedRole    =  4;
		bool   RestrictedTcn     =  5;
		bool   ProtocolMigration =  6;
		bool   EnableBPDURx      =  7;
		bool   EnableBPDUTx      =  8;
		bytes  PseudoRootId      =  9;
		bool   IsL2Gp            = 10;
		uint32 Port              = 11;
		uint32 ComponentID       = 12;
		string DeviceIP          = 13;
		bool   KVGetter          = 14;
		bool   CSSetter          = 15;
	}

	message InMstpCistTableRequest {
		int32  MaxHops     = 1;
		uint32 ComponentID = 2;
		string DeviceIP    = 3;
		bool   KVGetter    = 4;
		bool   CSSetter    = 5;
	}

	message InMstpConfigTableRequest {
		int32  FormatSelector    = 1;
		string ConfigurationName = 2;
		uint32 RevisionLevel     = 3;
		uint32 ComponentID       = 4;
		string DeviceIP          = 5;
		bool   KVGetter          = 6;
		bool   CSSetter          = 7;
	}

	message InMstpFidToMstiV2TableRequest {
		uint32 fid         = 1;
		uint32 ComponentID = 2;
		string DeviceIP    = 3;
		bool   KVGetter    = 4;
		bool   CSSetter    = 5;
	}

	message InMstpPortTableRequest {
		int32  Priority    = 1;
		int32  PathCost    = 2;
		uint32 ComponentID = 3;
		uint32 Port        = 4;
		uint32 MstID       = 5;
		string DeviceIP    = 6;
		bool   KVGetter    = 7;
		bool   CSSetter    = 8;
	}

	message InMstpTableRequest {
		int32  BridgePriority = 1;
		uint32 ComponentID    = 2;
		int32  MstpID         = 3;
		string DeviceIP       = 4;
		bool   KVGetter       = 5;
		bool   CSSetter       = 6;
	}